# Detection_system_carla_ros2

./: car_definition_file.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cylinder3d/lib/cylinder3d/: cylinder3d_node
install/cylinder3d/share/cylinder3d/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cylinder3d/share/cylinder3d/config/: cyl3d_params.yaml
install/cylinder3d/share/cylinder3d/launch/: cyl3d_only.launch.py
install/cylinder3d/share/cylinder3d/rviz/: cyl3d_view.rviz
install/detection_system/lib/detection_system/: fusion_node
install/detection_system/share/detection_system/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/detection_system/share/detection_system/config/: fusion_params.yaml
install/detection_system/share/detection_system/launch/: fusion.launch.py
install/detection_system/share/detection_system/rviz/: fusion_view.rviz
log/: latest_build
src/cylinder3d/: package.xml  setup.cfg  setup.py
src/cylinder3d/config/: cyl3d_params.yaml
src/cylinder3d/cylinder3d/: cyl3d_node.py
src/cylinder3d/launch/: cyl3d_only.launch.py
src/cylinder3d/rviz/: cyl3d_view.rviz
src/detection_system/: package.xml  setup.cfg  setup.py
src/detection_system/common/: pc2_utils.py
src/detection_system/config/: fusion_params.yaml
src/detection_system/detection_system/: fusion_node.py  pc2_utils.py
src/detection_system/launch/: fusion.launch.py
src/detection_system/rviz/: fusion_view.rviz
