<?xml version="1.0"?>
<package format="3">
  <name>detection_system</name>
  <version>0.0.1</version>
  <description>Post-inference fusion node and RViz config</description>
  <maintainer email="you@example.com">shareef</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
    <!-- THIS is critical: tells colcon the build type -->
    <build_type>ament_python</build_type>
  </export>
</package>
